fixup! scripts: Checkout defconfig regenerate script

--- a/scripts/update_defconfig
+++ b/scripts/update_defconfig
@@ -82,6 +82,7 @@ if [ -n  "$*" ]; then
     ${KERNEL_CFG}/../${SOC}-perf_defconfig \
     ${KERNEL_CFG}/../debugfs.config \
     ${KERNEL_CFG}/sm8250-common.config \
+    ${KERNEL_CFG}/sm8250-custom.config \
     ${KERNEL_CFG}/"${DEVICE}".config);
 
   case "$ret" in
