--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,17 +7,20 @@ container:
   image: diazaji/debian:kernel
   cpu: 8
   memory: 16G
-gcc_task:
-  name: Compile Kernel [GCC]
-  timeout_in: 60m
-  only_if: $CIRRUS_BRANCH == 'kucing-2k24'
-  script:
-    - wget -qO build.sh https://raw.githubusercontent.com/Diaz1401/build-script/alioth/build.sh
-    - bash build.sh gcc stable
+# gcc_task:
+#   name: Compile Kernel [GCC]
+#   timeout_in: 60m
+#   only_if: $CIRRUS_BRANCH == 'kucing-2k24'
+#   script:
+#     - wget -qO build.sh https://raw.githubusercontent.com/Diaz1401/build-script/alioth/build.sh
+#     - bash build.sh gcc stable
 clang_task:
-  name: Compile Kernel [Clang]
-  timeout_in: 60m
+  name: Compile Kernel
+  timeout_in: 120m
   only_if: $CIRRUS_BRANCH == 'kucing-2k24'
   script:
     - wget -qO build.sh https://raw.githubusercontent.com/Diaz1401/build-script/alioth/build.sh
     - bash build.sh clang stable
+    - bash build.sh clang beta
+    - bash build.sh gcc stable
+    - bash build.sh gcc beta
