ARM64: configs: Regenerate
Signed-off-by: Diaz1401 <diaznura@outlook.com>

--- a/arch/arm64/configs/cat_defconfig
+++ b/arch/arm64/configs/cat_defconfig
@@ -2,9 +2,9 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm64 4.19.318 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="gcc (Ubuntu 9.4.0-1ubuntu1~20.04.2) 9.4.0"
+CONFIG_CC_VERSION_TEXT="gcc (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=90400
+CONFIG_GCC_VERSION=110400
 CONFIG_CLANG_VERSION=0
 CONFIG_LLD_VERSION=0
 CONFIG_CC_HAS_ASM_GOTO=y
@@ -3078,8 +3078,7 @@ CONFIG_RC_DEVICES=y
 # CONFIG_IR_IMON_RAW is not set
 # CONFIG_IR_MCEUSB is not set
 # CONFIG_IR_REDRAT3 is not set
-# CONFIG_IR_SPI is not set
-CONFIG_IR_SPI_MI=y
+CONFIG_IR_SPI=y
 # CONFIG_IR_STREAMZAP is not set
 # CONFIG_IR_IGORPLUGUSB is not set
 # CONFIG_IR_IGUANA is not set
