--- a/arch/arm64/configs/alioth_defconfig
+++ b/arch/arm64/configs/alioth_defconfig
@@ -518,7 +518,7 @@ CONFIG_RC_CORE=y
 CONFIG_LIRC=y
 CONFIG_RC_DECODERS=y
 CONFIG_RC_DEVICES=y
-CONFIG_IR_SPI_MI=y
+CONFIG_IR_SPI=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER=y
