ARM64: configs: Regenerate
Signed-off-by: Diaz1401 <diaznura@outlook.com>

--- a/arch/arm64/configs/alioth_defconfig
+++ b/arch/arm64/configs/alioth_defconfig
@@ -36,7 +36,6 @@ CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_ZSTD is not set
 # CONFIG_SYSFS_SYSCALL is not set
 # CONFIG_FHANDLE is not set
-CONFIG_KALLSYMS_ALL=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
 # CONFIG_RSEQ is not set
@@ -747,6 +746,7 @@ CONFIG_ESOC_MDM_4x=y
 CONFIG_ESOC_MDM_DRV=y
 CONFIG_SENSORS_SSC=y
 CONFIG_QCOM_KGSL=y
+CONFIG_KSU=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
@@ -801,10 +801,6 @@ CONFIG_CRYPTO_DEV_QCEDEV=y
 CONFIG_PRINTK_TIME=y
 CONFIG_FRAME_WARN=4096
 CONFIG_MAGIC_SYSRQ=y
-CONFIG_DEBUG_KERNEL=y
 CONFIG_PANIC_TIMEOUT=-1
-# CONFIG_SCHED_DEBUG is not set
-# CONFIG_DEBUG_PREEMPT is not set
-# CONFIG_FTRACE is not set
 CONFIG_DEBUG_ALIGN_RODATA=y
 CONFIG_TECHPACK_CAMERA_XIAOMI=y
